--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -27,6 +27,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90" />
@@ -93,8 +94,11 @@
         <Label Grid.Row="4" Grid.Column="0" Content="_AutoSync:" Target="{Binding ElementName=UsbAutoSync}"/>
         <CheckBox Grid.Row="4" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="Automatically start sync, when compatible reader is connected to the computer"/>
 
-        <Label Grid.Row="5" Grid.Column="0" Content="_Debug:" Target="{Binding ElementName=Debug}" />
-        <Button Grid.Row="5" Grid.Column="1" Name="Debug" Content="Show console" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="Debug console displays runtime information about this application, this information will be probably of no use to you as user."/>
+        <Label Grid.Row="5" Grid.Column="0" Content="Close into _tray:" Target="{Binding ElementName=CloseIntoTray}"/>
+        <CheckBox Grid.Row="5" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CloseIntoTray" ToolTip="Closing this application causes it to minimize itself into the system tray instead. (AutoSync will be still working this way)"/>
+
+        <Label Grid.Row="6" Grid.Column="0" Content="_Debug:" Target="{Binding ElementName=Debug}" />
+        <Button Grid.Row="6" Grid.Column="1" Name="Debug" Content="Show console" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="Debug console displays runtime information about this application, this information will be probably of no use to you as user."/>
 
     </Grid>
 </Window>
