--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Libropouch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Libropouch"
         Title="Libropouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" x:Name="Window"
         Background="#2d2d30" KeyUp="MainWindow_OnKeyUp"
         Closing="MainWindow_OnClosing">
@@ -87,7 +88,7 @@
             </DataGrid.RowHeaderStyle>
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Title}" Width="*">
+                <DataGridTextColumn Header="{local:Lng BookGridHeaderTitle}" Binding="{Binding Title}" Width="*">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Padding" Value="5" />
@@ -95,7 +96,7 @@
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
-                <DataGridTemplateColumn Header=" ★">
+                <DataGridTemplateColumn Header="{local:Lng BookGridHeaderFavorite}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Tag="{Binding DirName}" Click="FavoriteToggle_OnClick" PreviewMouseDown="Favorite_OnPreviewMouseDown" ToolTip="Toggle to mark this book as one of your favorites.">
@@ -109,7 +110,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header=" ⇪">
+                <DataGridTemplateColumn Header="{local:Lng BookGridHeaderSync}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Tag="{Binding DirName}" Click="SyncToDeviceToggle_OnClick" PreviewMouseDown="Sync_OnPreviewMouseDown" 
@@ -124,7 +125,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTextColumn Header="Category" Binding="{Binding Category}" Width="auto"  >
+                <DataGridTextColumn Header="{local:Lng BookGridHeaderCategory}" Binding="{Binding Category}" Width="auto"  >
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Padding" Value="5" />
@@ -169,7 +170,7 @@
                                     </TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Visibility="{Binding SeriesVisibility}">
-                                    <TextBlock FontSize="18" Text="📚" FontWeight="Medium" VerticalAlignment="Center" />
+                                    <TextBlock FontSize="18" Text="📚 " FontWeight="Medium" VerticalAlignment="Center" />
                                     <TextBlock Text="{Binding Series}" FontWeight="DemiBold" VerticalAlignment="Center" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
@@ -179,7 +180,7 @@
                                 </StackPanel>
                                 <TextBlock Text="{Binding Description}" />
                             </StackPanel>
-                            <Button Content="Edit" Click="EditBook_OnClick" DataContext="{Binding DirName}"
+                            <Button Content="{local:Lng BookGridEdit}" Click="EditBook_OnClick" DataContext="{Binding DirName}"
                                     VerticalAlignment="Top" HorizontalAlignment="Right" />
                         </DockPanel>
                     </Border>
