--- a/Libropouch/EditBook.xaml
+++ b/Libropouch/EditBook.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Libropouch.EditBook"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Libropouch"
         Title="EditBook" Height="400" Width="620" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
@@ -38,13 +39,13 @@
 
         <Image Grid.Column="1" Grid.Row="0"  Grid.RowSpan="10" MouseLeftButtonUp="CoverImage_OnMouseLeftButtonUp" MouseRightButtonUp="CoverImage_OnMouseRightButtonUp" Loaded="CoverImage_OnLoaded" HorizontalAlignment="Right" VerticalAlignment="Top" MaxWidth="240" MaxHeight="240" ToolTip="Cover image for this book. You can select another image by clicking on this picture, or remove the existing image by right clicking on it." />
 
-        <Label Grid.Row="0" Grid.Column="0" Content="_Title:" Target="{Binding ElementName=Title}"/>
+        <Label Grid.Row="0" Grid.Column="0" Content="{local:Lng EditBookTitle}" Target="{Binding ElementName=Title}"/>
         <TextBox Grid.Row="0" Grid.Column="1" Name="Title" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="_Author:" Target="{Binding ElementName=Author}"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng EditBookAuthor}" Target="{Binding ElementName=Author}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Name="Author" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="_Language:" Target="{Binding ElementName=UiLanguage}"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng EditBookLanguage}" Target="{Binding ElementName=UiLanguage}"/>
         <ComboBox Grid.Row="2" Grid.Column="1" Name="UiLanguage" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -56,19 +57,19 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Label Grid.Row="3" Grid.Column="0" Content="S_eries:" Target="{Binding ElementName=Series}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Name="Series" Loaded="Series_OnLoaded"  LostFocus="TextBox_OnChanged"/>        
+        <Label Grid.Row="3" Grid.Column="0" Content="{local:Lng EditBookSeries}" Target="{Binding ElementName=Series}"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Name="Series" Loaded="Series_OnLoaded"  LostFocus="TextBox_OnChanged"/>
 
-        <Label Grid.Row="4" Grid.Column="0" Content="_Published:" Target="{Binding ElementName=Published}"/>
+        <Label Grid.Row="4" Grid.Column="0" Content="{local:Lng EditBookPublished}" Target="{Binding ElementName=Published}"/>
         <DatePicker Grid.Row="4" Grid.Column="1" Name="Published" Loaded="DatePicker_OnLoaded" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
 
-        <Label Grid.Row="5" Grid.Column="0" Content="_Category:" Target="{Binding ElementName=Category}"/>
+        <Label Grid.Row="5" Grid.Column="0" Content="{local:Lng EditBookCategory}" Target="{Binding ElementName=Category}"/>
         <TextBox Grid.Row="5" Grid.Column="1" Name="Category" Loaded="Category_OnLoaded"  LostFocus="TextBox_OnChanged"/>
 
-        <Label Grid.Row="6" Grid.Column="0" Content="_Favorite:" Target="{Binding ElementName=Favorite}"/>
+        <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng EditBookFavorite}" Target="{Binding ElementName=Favorite}"/>
         <CheckBox Grid.Row="6" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="Favorite" ToolTip="Mark this book as one of your favorites"/>
 
-        <Label Grid.Row="7" Grid.Column="0" Content="_Sync:" Target="{Binding ElementName=Sync}"/>
+        <Label Grid.Row="7" Grid.Column="0" Content="{local:Lng EditBookSync}" Target="{Binding ElementName=Sync}"/>
         <CheckBox Grid.Row="7" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="Sync" ToolTip="This book will by copied into your reader during synchronization"/>
 
         <Button Grid.Row="8" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Content="Discard" Click="Discard_OnClick" ToolTip="Remove this book from the library"/>
