--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Libropouch.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Libropouch"
         Title="Settings" Height="500" Width="800" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
@@ -34,7 +35,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="_Language:" Target="{Binding ElementName=UiLanguage}"/>
+        <Label Grid.Row="0" Grid.Column="0" Content="{local:Lng SettingsLanguage}" Target="{Binding ElementName=UiLanguage}"/>
         <ComboBox Grid.Row="0" Grid.Column="1" Name="UiLanguage" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -46,10 +47,10 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="_Splashscreen:" Target="{Binding ElementName=SplashScreen}"/>
+        <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng SettingsSplashScreen}" Target="{Binding ElementName=SplashScreen}"/>
         <CheckBox Grid.Row="1" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="SplashScreen" ToolTip="Show splashscreen while the application loads"/>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="_Reader:" Target="{Binding ElementName=Reader}"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng SettingsReader}" Target="{Binding ElementName=Reader}"/>
         <ComboBox Grid.Row="2" Grid.Column="1" Name="Reader" Width="150" Height="auto" Loaded="Reader_OnLoaded" SelectionChanged="Reader_OnSelectionChanged" ToolTip="Select the reader with which you are going to be using the Libropouch">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -78,26 +79,26 @@
                     <ColumnDefinition Width="150" />
                 </Grid.ColumnDefinitions>
 
-                <Button Content="What is this?" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="1" />
+                <Button Content="{local:Lng SettingsReaderCustomHint}" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="1" />
 
-                <Label Grid.Row="1" Grid.Column="0" Content="_Model:" Target="{Binding ElementName=DeviceModel}"/>
+                <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng SettingsModel}" Target="{Binding ElementName=DeviceModel}"/>
                 <TextBox Grid.Row="1" Grid.Column="1" Width="150" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Model name of the reader device, usually identical to the marketing name of the reader. (For example: kindle's model name is kindle) "/>
 
-                <Label Grid.Row="2" Grid.Column="0" Content="_PnP ID:" Target="{Binding ElementName=DevicePnpId}"/>
+                <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng SettingsPnp}" Target="{Binding ElementName=DevicePnpId}"/>
                 <TextBox Grid.Row="2" Grid.Column="1" Width="150" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Device's Plug and play ID. Usually identical to the model name. But it can differ. "/>
 
-                <Label Grid.Row="3" Grid.Column="0" Content="_Book directory:" Target="{Binding ElementName=DeviceRootDir}" />
+                <Label Grid.Row="3" Grid.Column="0" Content="{local:Lng SettingsBookDir}" Target="{Binding ElementName=DeviceRootDir}" />
                 <TextBox Grid.Row="3" Grid.Column="1" Width="150" Name="DeviceRootDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Directory on the device, where all the books are stored. This is the directory which Libropouch will use, while working with the device."/>                
             </Grid>
         </Border>
 
-        <Label Grid.Row="4" Grid.Column="0" Content="_AutoSync:" Target="{Binding ElementName=UsbAutoSync}"/>
+        <Label Grid.Row="4" Grid.Column="0" Content="{local:Lng SettingsAutosync}" Target="{Binding ElementName=UsbAutoSync}"/>
         <CheckBox Grid.Row="4" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="Automatically start sync, when compatible reader is connected to the computer"/>
 
-        <Label Grid.Row="5" Grid.Column="0" Content="Close into _tray:" Target="{Binding ElementName=CloseIntoTray}"/>
+        <Label Grid.Row="5" Grid.Column="0" Content="{local:Lng SettingsTray}" Target="{Binding ElementName=CloseIntoTray}"/>
         <CheckBox Grid.Row="5" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CloseIntoTray" ToolTip="Closing this application causes it to minimize itself into the system tray instead. (AutoSync will be still working this way)"/>
 
-        <Label Grid.Row="6" Grid.Column="0" Content="_Debug:" Target="{Binding ElementName=Debug}" />
+        <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
         <Button Grid.Row="6" Grid.Column="1" Name="Debug" Content="Show console" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="Debug console displays runtime information about this application, this information will be probably of no use to you as user."/>
 
     </Grid>
