--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -99,7 +99,7 @@
         <CheckBox Grid.Row="5" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CloseIntoTray" ToolTip="{local:Lng HintSettingsTray}"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
-        <Button Grid.Row="6" Grid.Column="1" Name="Debug" Content="Show console" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
+        <Button Grid.Row="6" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
 
     </Grid>
 </Window>
