--- a/Bookpouch/MainWindow.xaml
+++ b/Bookpouch/MainWindow.xaml
@@ -47,8 +47,8 @@
             </Button>
         </StackPanel>
 
-        <Border Panel.ZIndex="100" Grid.Row="0" Name="InfoBoxBorder" Grid.Column="0" CornerRadius="8"
-                Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged">
+        <Border Panel.ZIndex="100" Grid.Row="0" Name="InfoBoxBorder" Grid.Column="0" CornerRadius="8" Width="700"
+                Visibility="Hidden" VerticalAlignment="Top" IsVisibleChanged="InfoBox_OnIsVisibleChanged" MouseLeftButtonUp="InfoBox_OnMouseLeftButtonUp">
             <TextBlock Name="InfoBox" TextWrapping="Wrap" VerticalAlignment="Top" Padding="5" TextAlignment="Center"
                        RenderTransformOrigin="0.5,0.5" Foreground="Black"/>
         </Border>
