--- a/Bookpouch/MainWindow.xaml
+++ b/Bookpouch/MainWindow.xaml
@@ -192,8 +192,10 @@
                                 </StackPanel>
                                 <TextBlock Text="{Binding Description}" />
                             </StackPanel>
-                            <Button Content="{local:Lng BookGridEdit}" Click="EditBook_OnClick" Tag="{Binding BookFile}"
-                                    VerticalAlignment="Top" HorizontalAlignment="Right" />
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" >                             
+                                <Button Content="{local:Lng BookGridOpenDir}" Click="BookDir_OnClick" Tag="{Binding BookFile}" Margin="0 0 5 0"/>
+                                <Button Content="{local:Lng BookGridEdit}" Click="EditBook_OnClick" Tag="{Binding BookFile}"/>
+                            </StackPanel>
                         </DockPanel>
                     </Border>
                 </DataTemplate>
